<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login"
            android:fillViewport="true"
            tools:context=".activities.LoginActivity">

  <android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

      <TextView

          android:id="@+id/textView"
          android:layout_width="237dp"
          android:layout_height="59dp"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="200dp"
          android:fontFamily="sans-serif"
          android:text="@string/titulo_login"
          android:textColor="#F3BE26"
          android:textSize="20sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


      <EditText
          android:id="@+id/editTextEmail"
          android:layout_width="match_parent"
          android:layout_height="@dimen/login_edit_text_height"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="24dp"
          android:backgroundTint="@android:color/white"
          android:hint="@string/login_email"
          android:inputType="textEmailAddress"
          android:paddingLeft="@dimen/login_edit_text_space"
          android:paddingRight="@dimen/login_edit_text_space"
          android:textColor="#FFFFFF"
          android:textColorHint="#FFFFFF"
          android:textSize="@dimen/login_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView" />

      <EditText
          android:id="@+id/editTextPassword"
          android:layout_width="match_parent"
          android:layout_height="@dimen/login_edit_text_height"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="24dp"
          android:backgroundTint="@android:color/white"
          android:hint="@string/login_password"
          android:inputType="textPassword"
          android:paddingLeft="@dimen/login_edit_text_space"
          android:paddingRight="@dimen/login_edit_text_space"
          android:textColor="#FFFFFF"
          android:textColorHint="#FFFFFF"
          android:textSize="@dimen/login_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

      <Button
          android:id="@+id/buttonLogIn"
          android:layout_width="match_parent"
          android:layout_height="@dimen/login_button_xl_height"
          android:layout_marginTop="24dp"
          android:background="@drawable/button_ripple_bg"
          android:text="@string/login_sign_in"
          android:textColor="@color/colorPrimaryText"
          android:textSize="@dimen/login_text_xl_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword" />

      <TextView
          android:id="@+id/textViewForgetPassword"
          android:layout_width="wrap_content"
          android:layout_height="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="24dp"
          android:text="@string/login_forgot_password"
          android:textColor="@color/colorSecondaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.868"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

      <Button
          android:id="@+id/buttonLogInGoogle"
          android:layout_width="match_parent"
          android:layout_height="52dp"
          android:layout_marginTop="16dp"
          android:background="@drawable/button_ripple_google"
          android:text="@string/login_sign_in_google"
          android:textColor="@color/colorPrimaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

      <Button
          android:id="@+id/buttonCreateAccount"
          android:layout_width="match_parent"
          android:layout_height="@dimen/login_button_xl_height"
          android:layout_marginTop="16dp"
          android:background="@drawable/button_ripple"
          android:text="@string/login_sign_up"
          android:textColor="@color/colorPrimaryText"
          android:textSize="@dimen/login_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/buttonLogInGoogle" />




  </android.support.constraint.ConstraintLayout>

</ScrollView>

